--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.12",
+    "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.536.0",
@@ -18,9 +20,12 @@
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
+    "react-error-boundary": "^6.0.0",
     "react-icons": "^5.5.0",
-    "recharts": "^3.1.0"
+    "recharts": "^3.1.0",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "postcss": "^8",
